<resources>

    <!-- application -->
    <string name="app_name">Waves</string>
    <string name="version_code">0.0.4</string>
    <string name="powered">Powered by Dribbble.</string>
    <string name="author_name">wangdaye</string>
    <string name="my_email">wangdayeeeeee@gmail.com</string>
    <string name="my_github">https://github.com/WangDaYeeeeee</string>
    <string name="material_icon_web">https://materialdesignicons.com/</string>
    <string name="dribbble_web">https://dribbble.com/</string>
    <string name="contact_me">Contact author</string>

    <!-- drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- key words -->
    <string name="shots">Shots</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="filtrate">Filtrate</string>
    <string name="filtrate_shots">Filtrate Shots.</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="sort">Sort</string>
    <string name="list">List</string>
    <string name="version">Version</string>
    <string name="author">Author</string>
    <string name="email">Email</string>
    <string name="thx">Thx</string>
    <string name="icon">Icon</string>
    <string name="comments">Comments</string>
    <string name="about_app">About app</string>
    <string name="check_all">Check all</string>
    <string name="searchbar_hint">Search from Dribbble…</string>
    <string name="check_shot_item_type">Check the type of the shot item View.</string>

    <!-- feedback -->
    <string name="login_dribble">Hello Dribbble.</string>
    <string name="get_shots_data_failed">Get Shots failed.</string>
    <string name="refreshing_new">Refresh…</string>
    <string name="loading_more">Loading more…</string>
    <string name="save_failed">Save failed.</string>
    <string name="cannot_found_sd_card">Cannot write data to SD-card.</string>
    <string name="cannot_create_file_dir">Cannot create file direction.</string>
    <string name="air_ball">AIR BALL!</string>
    <string name="touch_to_retry">Touch to retry.</string>
    <string name="download_start">Download start.</string>
    <string name="download_success">Download success.</string>
    <string name="no_data">No data.</string>
    <string name="no_comments">No comments.</string>

    <!-- nav item -->
    <string name="nav_home">Explore</string>
    <string name="nav_myBuckets">My buckets (soon)</string>
    <string name="nav_myLikes">My likes (soon)</string>
    <string name="nav_myShots">My shots (soon)</string>
    <string name="nav_settings">@string/settings</string>
    <string name="nav_about">About</string>

    <!-- menu -->
    <string name="action_search">@string/search</string>
    <string name="action_filtrate">@string/filtrate</string>
    <string name="action_shot_item_type">Shot item type</string>

    <!-- intent key words -->
    <string name="key_shot_id">shot_id</string>
    <string name="key_image_uri">image_uri</string>
    <string name="key_player_icon_uri">player_icon_uri</string>
    <string name="key_web_uri">web_uri</string>
    <string name="key_title">title</string>
    <string name="key_sub_title">sub_title</string>
    <string name="key_content">content</string>
    <string name="key_likes">likes</string>
    <string name="key_views">views</string>
    <string name="key_buckets">buckets</string>
    <string name="key_values">values</string>
    <string name="key_tags">tags</string>
    <string name="key_touch_x">touch_x</string>
    <string name="key_touch_y">touch_y</string>
    <string name="key_reveal_color">reveal_color</string>

    <!-- settings -->
    <string name="category_basic">Basic</string>
    <string name="settings_shots_sort">Select default shots sort.</string>
    <string name="settings_shots_sort_summary">Default sort is Popular.</string>
    <string name="settings_shots_list">Select default shots list.</string>
    <string name="settings_shots_list_summary">Default list is AnyType.</string>

    <!-- share preference -->
    <string name="key_shots_item_type_popular">shots_item_type_popular</string>
    <string name="key_shots_item_type_recent">shots_item_type_recent</string>
    <string name="key_shots_sort">shots_sort</string>
    <string name="key_shots_list">shots_list</string>
    <string name="default_shots_sort">popular</string>
    <string name="default_shots_list">any_type</string>

</resources>
